--- a/book/linear_algebra.ipynb
+++ b/book/linear_algebra.ipynb
@@ -23,10 +23,10 @@
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Modulo para resolver ecuaciones diferenciales ordinarias.\n",
+    "# Módulo para resolver ecuaciones diferenciales ordinarias\n",
     "from scipy.integrate import odeint\n",
     "\n",
-    "# Importar la biblioteca de álgebra lineal de scipy\n",
+    "# Importar la biblioteca de álgebra lineal de SciPy\n",
     "from scipy import linalg as la"
    ]
   },
@@ -3716,7 +3716,7 @@
     "\n",
     "**Sustitución hacia adelante:**\n",
     "\n",
-    "$\\quad  y_{i}=\\dfrac{\\left(I_{ij}-\\sum_{j=0}^{i-1}l_{ij}y_j\\right)}{l_{ii}}$ para $ i=0,1,\\dots,n$"
+    "$\\quad  y_{i}=\\dfrac{\\left(I_{ij}-\\sum\\limits_{j=0}^{i-1}l_{ij}y_j\\right)}{l_{ii}}$ para $ i=0,1,\\dots,n$"
    ]
   },
   {
@@ -3749,7 +3749,7 @@
    "source": [
     "**Sustitución hacia atrás:**\n",
     "\n",
-    "$A^{-1}_{ij}=\\dfrac{\\left(y_{i}-\\sum_{k=i+1}^{n}u_{i k}A^{-1}_{ik}\\right)}{u_{ii}}$\n",
+    "$A^{-1}_{ij}=\\dfrac{\\left(y_{i}-\\sum\\limits_{k=i+1}^{n}u_{i k}A^{-1}_{ik}\\right)}{u_{ii}}$\n",
     "\n",
     "donde el índice $j$ se refiere a la columna j-ésima de la matriz $A^{-1}_{ij}$ y el índice $k$ es utilizado por el algoritmo para referirse a las columnas de $U$."
    ]
