--- a/book/linear_algebra.ipynb
+++ b/book/linear_algebra.ipynb
@@ -386,7 +386,7 @@
        "\u001b[0;31mSignature:\u001b[0m       \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
        "\u001b[0;31mCall signature:\u001b[0m  \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
        "\u001b[0;31mType:\u001b[0m            _ArrayFunctionDispatcher\n",
-       "\u001b[0;31mString form:\u001b[0m     <function flip at 0x7f121c2202c0>\n",
+       "\u001b[0;31mString form:\u001b[0m     <function flip at 0x7fe3005a3b00>\n",
        "\u001b[0;31mFile:\u001b[0m            /usr/lib/python3.11/site-packages/numpy/lib/function_base.py\n",
        "\u001b[0;31mDocstring:\u001b[0m      \n",
        "Reverse the order of elements in an array along the given axis.\n",
@@ -586,7 +586,7 @@
        "\u001b[0;31mSignature:\u001b[0m       \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkron\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
        "\u001b[0;31mCall signature:\u001b[0m  \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkron\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
        "\u001b[0;31mType:\u001b[0m            _ArrayFunctionDispatcher\n",
-       "\u001b[0;31mString form:\u001b[0m     <function kron at 0x7f121c22bce0>\n",
+       "\u001b[0;31mString form:\u001b[0m     <function kron at 0x7fe3005cb560>\n",
        "\u001b[0;31mFile:\u001b[0m            /usr/lib/python3.11/site-packages/numpy/lib/shape_base.py\n",
        "\u001b[0;31mDocstring:\u001b[0m      \n",
        "Kronecker product of two arrays.\n",
