--- a/book/numpy_b.ipynb
+++ b/book/numpy_b.ipynb
@@ -2205,7 +2205,7 @@
     "        )\n",
     "\n",
     "        ax.view_init(75, 230)\n",
-    "        plt.draw()\n",
+    "        # plt.draw()\n",
     "\n",
     "        ax.grid()\n",
     "        ax.set_xlabel(\"prof\")\n",
@@ -2275,7 +2275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 59,
    "metadata": {
     "id": "NYMuaO6Oy_vw"
    },
@@ -2289,7 +2289,7 @@
     "        X, Y, Z, cmap=cm.rainbow, linewidth=0, antialiased=False, alpha=0.8\n",
     "    )\n",
     "    ax.view_init(45, 230)\n",
-    "    plt.draw()\n",
+    "    # plt.draw()\n",
     "    ax.grid()\n",
     "    ax.set_xlabel(\"X\")\n",
     "    ax.set_ylabel(\"Y\")\n",
@@ -2679,11 +2679,9 @@
     "id": "mSNMfAjv2-_E"
    },
    "source": [
-    "Código principal del ejercicio. El único cambio que usted debe realizar es la dirección en donde desea salvar los png resultantes. En este caso se encuentra prefijado en una carpeta de Google Drive con la dirección:\n",
+    "Código principal del ejercicio. El único cambio que usted debe realizar es la dirección en donde desea salvar los png resultantes.\n",
     "\n",
-    "/content/gdrive/My Drive/Escuela-Peru-Alemania-2022/Projectos/Ex1\n",
-    "\n",
-    "Pero si decide correr este código de forma local en su computadora solo tiene que poner la dirección correcta y completa de la carpeta local en su computadora, como un string en la variable "
+    "Solo tiene que poner la dirección correcta y completa de la carpeta local en su computadora, como un string en la variable "
    ]
   },
   {
