--- a/book/eigenvalues.ipynb
+++ b/book/eigenvalues.ipynb
@@ -36,9 +36,9 @@
     "id": "3QheweFzPn3l"
    },
    "source": [
-    "# Vectores y valores propios\n",
+    "## Vectores y valores propios\n",
     "\n",
-    "## Problemas de valores y vectores propios\n",
+    "### Problemas de valores y vectores propios\n",
     "\n",
     "El problema de los valores y vectores propios se refiere a la solución del problema\n",
     "$A\\vec{v}=\\lambda\\vec{v}$.\n",
@@ -213,9 +213,9 @@
     "\n",
     "La diferencia que se muestra en el segundo vector está dada por aproximaciones numéricas.\n",
     "\n",
-    "# Ecuaciones Diferenciales Ordinarias y Optimización\n",
+    "## Ecuaciones Diferenciales Ordinarias y Optimización\n",
     "\n",
-    "## Presentación del método `odeint`\n",
+    "### Presentación del método `odeint`\n",
     "\n",
     "Para la resolución de ecuaciones diferenciales ordinarias existe la\n",
     "función `odeint` que está implementada en el módulo `scipy.integrate`.\n",
@@ -244,7 +244,7 @@
    "source": [
     "Expliquemos como se utiliza a través de los siguientes ejemplos\n",
     "\n",
-    "## Modelo SIR (Simulación de epidemias)\n",
+    "### Modelo SIR (Simulación de epidemias)\n",
     "\n",
     "El modelo SIR es utilizado en la simulación matemática de epidemias.\n",
     "Sus siglas quieren decir en lenguaje inglés \n",
@@ -264,7 +264,7 @@
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "## Simulación de la epidemia del COVID en Perú desde 2020.04 hasta 2022.01\n",
+    "### Simulación de la epidemia del COVID en Perú desde 2020.04 hasta 2022.01\n",
     "\n",
     "Los datos fueron obtenidos de la siguiente fuente:\n",
     "```\n",
@@ -3676,7 +3676,7 @@
     "id": "mELNuOX28IwX"
    },
    "source": [
-    "## **Ejemplo #1**: Atunes y Delfines\n",
+    "### **Ejemplo #1**: Atunes y Delfines\n",
     "\n",
     "Supongamos que nos encontramos analizando el comportamiento de dos poblaciones que existen en un\n",
     "mismo ecosistema de forma ideal.\n",
