--- a/book/python.ipynb
+++ b/book/python.ipynb
@@ -18,7 +18,8 @@
     "\n",
     "## ¿Qué es Python?\n",
     "\n",
-    "Python, la \"nueva ola en la computación científica\". Esta es la afirmación plasmada en el artículo \"[Why Python Is the Next Wave in Earth Sciences Computing](https://journals.ametsoc.org/view/journals/bams/93/12/bams-d-12-00148.1.xml) publicado en el [volumen 100 No. 1 del boletín de la American Meteorological Society](https://journals.ametsoc.org/view/journals/bams/103/6/bams.103.issue-6.xml).\n",
+    "Python, la \"nueva ola en la computación científica\".\n",
+    "Esta es la afirmación plasmada en el artículo \"[Why Python Is the Next Wave in Earth Sciences Computing](https://journals.ametsoc.org/view/journals/bams/93/12/bams-d-12-00148.1.xml) publicado en el [volumen 100 No. 1 del boletín de la American Meteorological Society](https://journals.ametsoc.org/view/journals/bams/103/6/bams.103.issue-6.xml).\n",
     "\n",
     "<img src=\"https://journals.ametsoc.org/coverimage?doc=%2Fjournals%2Fbams%2F93%2F12%2Fbams.93.issue-12.xml&width=200&type=webp\">\n",
     "\n",
@@ -37,13 +38,19 @@
     "el creciente apoyo para Python en las ciencias de la Tierra,...>>\n",
     "```\n",
     "\n",
-    "Python es un lenguaje que tiene un diseño y soporte por parte de la comunidad científica tal que, se ajusta muy bien a las necesidades de desarrollo de soluciones computacionales.\n",
+    "Python es un lenguaje que tiene un diseño y soporte por parte de la comunidad científica tal que,\n",
+    "se ajusta muy bien a las necesidades de desarrollo de soluciones computacionales.\n",
     "\n",
-    "En el artículo  [\"10 Reasons Python Rocks for Research (And a Few Reasons it Doesn’t)\"](https://web.archive.org/web/20190403064043/https://www.stat.washington.edu/~hoytak/blog/whypython.html) podrán encontrar algunas ventajas y desventajas que tiene este lenguaje para este fin. Incluso, la revista Nature dedicó uno de sus artículos al uso de Python en la ciencia titulado [Interactive notebooks: Sharing the code](https://www.dulvy.com/uploads/2/1/0/4/21048414/shen_2014_nature.pdf). \n",
+    "En el artículo [\"10 Reasons Python Rocks for Research (And a Few Reasons it Doesn’t)\"](https://web.archive.org/web/20190403064043/https://www.stat.washington.edu/~hoytak/blog/whypython.html) podrán encontrar algunas ventajas y desventajas que tiene este lenguaje para este fin.\n",
+    "Incluso, la revista Nature dedicó uno de sus artículos al uso de Python en la ciencia titulado [Interactive notebooks: Sharing the code](https://www.dulvy.com/uploads/2/1/0/4/21048414/shen_2014_nature.pdf). \n",
     "\n",
     "<img src=\"https://github.com/Numerical-Analysis-2024/tutorial/assets/21283014/f9df015c-2e62-460e-a8c1-5e86b9a125a1\" width=300 height=400>\n",
     "\n",
-    "Está claro que un solo lenguaje de programación por si solo no puede resolver todos los problemas, pero uno de los puntos positivos que tiene Python es su capacidad de trabajar de forma cooperativa con otros lenguejes. O sea, no es un lenguaje cerrado sino integrador. Este es el espíritu que nos motiva para el curso: introducirnos en el uso de esta herramienta de manera que todos podamos en conjunto hacer más ciencia y mejor.\n",
+    "Está claro que un solo lenguaje de programación por si solo no puede resolver todos los problemas, pero uno de los\n",
+    "puntos positivos que tiene Python es su capacidad de trabajar de forma cooperativa con otros lenguajes.\n",
+    "O sea, no es un lenguaje cerrado sino integrador.\n",
+    "Este es el espíritu que nos motiva para el curso: introducirnos en el uso de esta herramienta de manera que todos\n",
+    "podamos en conjunto hacer más ciencia y mejor.\n",
     "\n",
     "## Lenguaje compilado vs interpretado\n",
     "\n",
@@ -53,13 +60,15 @@
     "\n",
     "<img src=\"https://hackingcpp.com/cpp/slides/cpp_separate_compilation_03.svg\" width=800 height=780>\n",
     "\n",
-    "Al compilar un lenguaje el compilador recibe una secuencia de líneas de código de forma íntegra usalmente en un fichero a través del IDE de programación utilizado. \n",
+    "Al compilar un lenguaje el compilador recibe una secuencia de líneas de código de forma íntegra usualmente en un\n",
+    "fichero a través del IDE de programación utilizado. \n",
     "\n",
-    "El proceso de compilación puede ser descrito en los siguentes pasos sucesivos, en este caso para un lenguaje dependiente del contexto:\n",
+    "El proceso de compilación puede ser descrito en los siguientes pasos sucesivos, en este caso para un lenguaje dependiente del contexto:\n",
+    "\n",
     "1.   **Análisis lexicográfico**: Permite analizar el código línea por línea aislando los conjuntos de caracteres que tengan algún sentido para el lenguaje definido. Estos pueden ser números, etiquetas, palabras clave, signos de creación de ambiente etc.\n",
-    "2. **Análsis sintáctico**: Cada lenguaje tiene definida una gramática. Esto se refiere a una serie de reglas que deben seguirse al escribir los números, etiquetas, palabras clave, etc. En este punto el compilador analiza si lo que está escrito lexicográficamente correcto también hace un uso correcto de dicha gramática.\n",
-    "3. **Análsis semántico**: En este caso se asume que el código está bien escrito de acuerdo al lenguaje por lo que el próximo paso es analizar si además tiene sentido. Este es el caso en el que se verifican los tipos de los objetos definidos, no inicializaciones de variables, etc.\n",
-    "4. **Generación del código  de máquina**: Llegado a este punto el programa escrito es un programa válido del lenguaje. Como implicación se traduce cada una de las partes del código (lenguaje de alto nivel) a un lenguaje que la computadora puede entender con instrucciones precisas directamente especificadas para la arquitectura de hardware de la misma. Usualmente este lenguaje de bajo nivel es llamado \"Ensamblador\".\n",
+    "2. **Análisis sintáctico**: Cada lenguaje tiene definida una gramática. Esto se refiere a una serie de reglas que deben seguirse al escribir los números, etiquetas, palabras clave, etc. En este punto el compilador analiza si lo que está escrito lexicográficamente correcto también hace un uso correcto de dicha gramática.\n",
+    "3. **Análisis semántico**: En este caso se asume que el código está bien escrito de acuerdo al lenguaje por lo que el próximo paso es analizar si además tiene sentido. Este es el caso en el que se verifican los tipos de los objetos definidos, no inicializaciones de variables, etc.\n",
+    "4. **Generación del código de máquina**: Llegado a este punto el programa escrito es un programa válido del lenguaje. Como implicación se traduce cada una de las partes del código (lenguaje de alto nivel) a un lenguaje que la computadora puede entender con instrucciones precisas directamente especificadas para la arquitectura de hardware de la misma. Usualmente este lenguaje de bajo nivel es llamado \"Ensamblador\".\n",
     "\n",
     "Proceso de compilación de lenguaje interpretado:\n",
     "\n",
@@ -67,10 +76,13 @@
     "\n",
     "<img src=\"https://www.c-sharpcorner.com/article/why-learn-python-an-introduction-to-python/Images/last2.png\" width=700 height=510>\n",
     "\n",
-    "En le caso de un lenguaje interpretado el interprete hace los análisis y generación de código antes mencionados en *tiempo real* línea de código por línea de código.\n",
+    "En le caso de un lenguaje interpretado el intérprete hace los análisis y generación de código antes mencionados\n",
+    "en *tiempo real* línea de código por línea de código.\n",
     "\n",
-    "Python es un lenguaje interpretado pero en lugar de compilar el código directamente a código de máquina lo hace a un lenguaje intermedio llamado *bytecode*. Por ejemplo, la siguiente instrucción \n",
-    "``` python\n",
+    "Python es un lenguaje interpretado, pero en lugar de compilar el código directamente a código de máquina lo hace\n",
+    "a un lenguaje intermedio llamado *bytecode*.\n",
+    "Por ejemplo, la siguiente instrucción \n",
+    "```python\n",
     "a = b.c()\n",
     "```\n",
     "es transformada a una cadena de bytes que cuando es desensamblada se escribe de la siguiente forma:\n",
@@ -81,21 +93,28 @@
     "call_function 0;\n",
     "store 1 (a);\n",
     "```\n",
-    "Pudiera parece que el lenguaje bytecode es más ineficiente dado que requiere más código, pero de hecho es mucho más eficiente. La clave está en que es mucho más simple y fácil de entender por la máquina virtual de Python.\n",
+    "Pudiera parece que el lenguaje bytecode es más ineficiente dado que requiere más código, pero de hecho es mucho más eficiente.\n",
+    "La clave está en que es mucho más simple y fácil de entender por la máquina virtual de Python.\n",
     "\n",
-    "El hecho de utilizar un lenguaje intermedio y una máquina virtual hace que el lenguaje Python sea multi-plataforma siguiendo un concepto parecido al de lenguajes como Java y C#.\n",
+    "El hecho de utilizar un lenguaje intermedio y una máquina virtual hace que el lenguaje Python sea\n",
+    "multi-plataforma siguiendo un concepto parecido al de lenguajes como Java y C#.\n",
     "\n",
-    "Si le da curiosidad saber cómo se ven los códigos de Python en bytecode puede usted usar la biblioteca estándar de Python implementada en el módulo [dis](https://docs.python.org/3/library/dis.html).\n",
+    "Si le da curiosidad saber cómo se ven los códigos de Python en bytecode puede usted usar la biblioteca estándar\n",
+    "de Python implementada en el módulo [dis](https://docs.python.org/3/library/dis.html).\n",
     "\n",
     "## Lenguaje estáticamente vs dinámicamente tipado\n",
     "\n",
-    "Un lenguaje estáticamente tipado se distingue porque el tipo de todas las variables es conocido en tiempo de ejecución. Lo usual en este tipo de lenguajes es que el programador tenga que especificar claramente cúal es el tipo correspondiente a cada variable en el código. Como ejemplo pudieramos mencionar lenguajes como Java, C, C++, C#, Fortran, etc. \n",
+    "Un lenguaje estáticamente tipado se distingue porque el tipo de todas las variables es conocido en tiempo de ejecución.\n",
+    "Lo usual en este tipo de lenguajes es que el programador tenga que especificar claramente cuál es el tipo correspondiente a cada variable en el código.\n",
+    "Como ejemplo pudiéramos mencionar lenguajes como Java, C, C++, C#, Fortran, etc. \n",
     "\n",
-    "Existen otros lenguajes que también son estáticamente tipados pero que el propio compilador aplica una *inferencia de tipo* con la cual es capaz de deducir el tipo de las variables. Por ejemplo, OCaml, Haskell, Scala, Kotlin, etc.\n",
+    "Existen otros lenguajes que también son estáticamente tipados, pero que el propio compilador aplica una *inferencia de tipo* con la cual es capaz de deducir el tipo de las variables. Por ejemplo, OCaml, Haskell, Scala, Kotlin, etc.\n",
     "\n",
-    "En el caso de los lenguajes dinámicamente tipados los tipos son asociados con valores en tiempo de corrida (tiempo real) y no con variables o campos. Esto implica que es posible que una variable tome diferentes tipos a lo largo de la ejecución del programa de forma **dinámica**. Ejemplos de estos lenguajes son Perl, Ruby, PHP, JavaScript, Python, Matlab, Octave, etc.\n",
+    "En el caso de los lenguajes dinámicamente tipados los tipos son asociados con valores en tiempo de corrida (tiempo real) y no con variables o campos. Esto implica que es posible que una variable tome diferentes tipos a lo largo de la ejecución del programa de forma **dinámica**. Ejemplos de estos lenguajes son Perl, Ruby, PHP, JavaScript, Python, MATLAB, Octave, etc.\n",
     "\n",
-    "Casi todos los lenguajes basados en scripts son dinámicos. Esto también tiene el inconveniente de que no es posible en la mayoría de los casos para el interprete detectar errores en el código hasta que el mismo es ejecutado.\n",
+    "Casi todos los lenguajes basados en scripts son dinámicos.\n",
+    "Esto también tiene el inconveniente de que no es posible en la mayoría de los casos para el\n",
+    "intérprete detectar errores en el código hasta que el mismo es ejecutado.\n",
     "\n",
     "## Léxico, sintaxis y semántica\n",
     "\n",
@@ -108,26 +127,29 @@
     "\n",
     "### Los tipos de datos de Python\n",
     "\n",
-    "Python como todo lenguaje de programación consta con *tipos de datos* para representar la información. Aunque es un *lenguaje fuertemente tipado* hace uso de un *tipado dinámico*.\n",
+    "Python como todo lenguaje de programación consta con *tipos de datos* para representar la información.\n",
+    "Aunque es un *lenguaje fuertemente tipado* hace uso de un *tipado dinámico*.\n",
     "\n",
     "Que sea fuertemente tipado implica que casi todo lo que está implementado en Python posee un tipo de dato o de objeto asignado.\n",
     "\n",
-    "En el caso de tipado dinámico se refiere a que las variables no poseen un tipo estático sino que el mismo puede cambiar de acuerdo a los intereses del programador.\n",
+    "En el caso de tipado dinámico se refiere a que las variables no poseen un tipo estático,\n",
+    "sino que el mismo puede cambiar de acuerdo a los intereses del programador.\n",
     "\n",
-    "Estas características hacen que Python sera relativamente fácil de usar y flexible.\n",
+    "Estas características hacen que Python sea relativamente fácil de usar y flexible.\n",
     "\n",
     "Los tipos de datos de Python más importantes son:\n",
     "\n",
     "Tipo de dato      | Descripción\n",
     "------------------|-------------------\n",
-    "`str`             | Representa cadenas de caracteres (String).\n",
+    "`str`             | Representa cadenas de caracteres (string).\n",
     "`int`             | Representa a un número entero (integer).\n",
     "`float`           | Representa un número de punto flotante.\n",
     "`complex`         | Representa un número complejo.\n",
     "`bool`            | Representa un valor booleano verdadero o falso.\n",
     "`None`            | Representa un valor nulo.\n",
     "\n",
-    "Una cadena de caracteres se define usando ```' '``` o ```\" \"```. Aunque no es posible mezclarlos."
+    "Una cadena de caracteres se define usando ```' '``` o ```\" \"```.\n",
+    "Aunque no es posible mezclarlos."
    ]
   },
   {
@@ -454,20 +476,15 @@
     "id": "F73Mfl6s9oRe"
    },
    "source": [
-    "### Variables y asignación de valores"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "XUWkQwCdrRen"
-   },
-   "source": [
-    "Las variables se crean nombrandolas con una etiqueta y asignándole un valor.\n",
+    "### Variables y asignación de valores\n",
+    "\n",
+    "Las variables se crean nombrándolas con una etiqueta y asignándole un valor.\n",
     "\n",
     "```var = <valor>```\n",
     "\n",
-    "Como es un lenguaje dinámico entonces no es necesario declarar la variable de un tipo determinado aunque esto no significa que no tenga tipo. De hecho, siempre se encuentra tipada."
+    "Como es un lenguaje dinámico entonces no es necesario declarar la variable de un tipo determinado\n",
+    "aunque esto no significa que no tenga tipo.\n",
+    "De hecho, siempre se encuentra tipada."
    ]
   },
   {
@@ -790,7 +807,9 @@
     "\n",
     "### Estructuras de control\n",
     "\n",
-    "Las estructuras de control permiten controlar el flujo de ejecución del código. Las más utilizadas son las estructuras condicionales, los bucles y los métodos, además de las clases pero este contenido no será tratado en este curso.\n",
+    "Las estructuras de control permiten controlar el flujo de ejecución del código.\n",
+    "Las más utilizadas son las estructuras condicionales, los bucles y los métodos, además de las clases,\n",
+    "pero este contenido no será tratado en este curso.\n",
     "\n",
     "#### Estructuras condicionales\n",
     "\n",
@@ -805,7 +824,10 @@
     "....<código 3>\n",
     "```\n",
     "\n",
-    "En el caso en que la ```expresión booleana #1``` sea verdadera entonces se ejecuta el bloque de ```código #1``` y luego continua el flujo del programa. En caso contrario entonces se evalua la ```expresión booleana #2```. De ser verdadera entonces se ejecuta el bloque de ```código #2```. En caso de no ser verdaderas las dos primeras condiciones entonces se ejecuta el ```código #3```.\n",
+    "En el caso en que la `expresión booleana #1` sea verdadera entonces se ejecuta el bloque de `código #1` y luego continúa el flujo del programa.\n",
+    "En caso contrario, entonces se evalúa la `expresión booleana #2`.\n",
+    "De ser verdadera entonces se ejecuta el bloque de `código #2`.\n",
+    "En caso de no ser verdaderas las dos primeras condiciones entonces se ejecuta el `código #3`.\n",
     "\n",
     "Veamos un ejemplo:\n",
     "\n",
